# graphrag-offshore-challenge

./: CHALLENGE_BRIEF.md  Makefile  PLAN.md  README.md  SPEC.md  pyproject.toml  requirements.txt
data/: gold_sources.yaml  questions.yaml
data/corpus/: 01_project_overview.md  02_reservoir_case.md  03_wells_config.md  04_subsea_layout.md  05_flow_assurance.md  06_topside.md  07_economics.md  08_decision_log.md  09_scenario_s2_fpso.md  10_revision_addendum.md
docs/adr/: 0001-calibracao-de-precision.md
src/graphrag/: __init__.py  __main__.py  agent.py  eval.py  graph.py  ingest.py  retrieve.py
tests/: test_graphrag.py
