[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-offshore"
version = "0.1.0"
description = "GraphRAG sobre corpus de engenharia offshore (desafio DSS)"
requires-python = ">=3.10"
dependencies = ["networkx>=3.0", "pyyaml>=6.0", "pydantic>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
